src/objects/Partner_CRA_Status_History__c.object
<CustomObject>
    <fields>
        <fullName>New_CRA_Status__c</fullName>
        <label>New CRA Status</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_CRA_Status__c</fullName>
        <label>Old CRA Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <label>Partner Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner CRA Status History</relationshipLabel>
        <relationshipName>Partner_CRA_Status_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Partner CRA Status History</label>
    <nameField>
        <displayFormat>CRA-{000}</displayFormat>
        <label>CRA Status History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner CRA Status History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>